# DeviceAccess-OpcUaBackend

./: .rodare.json  CITATION.cff  CMakeLists.txt  README.md
include/: CatalogueCache.h  ManagedTypes.h  MapFile.h  OPC-UA-Backend.h  OPC-UA-BackendRegisterAccessor.h  OPC-UA-Connection.h  RegisterInfo.h  SubscriptionManager.h  VersionMapper.h  XmlTools.h
src/: CatalogueCache.cc  ManagedTypes.cc  MapFile.cc  OPC-UA-Backend.cc  RegisterInfo.cc  SubscriptionManager.cc  VersionMapper.cc  XmlTools.cc  open62541.c
test/: CMakeLists.txt  memorytest.C  opcua_cache.xml  opcua_map.map  opcua_map_rootNode.map  opcua_map_xml.map  opcua_map_xml_rootNode.map  testBrowse.C  testCatalogueCache.C  testClient.C  testMapFiles.C  testSimpleServer.C  testSubscription.C  testUnifiedBackendTest.C  testWrite.C  test_mapping.xml
test/DummyServer/: DummyServer.cc  DummyServer.h
xmlschema/: opcua_cache.xsd  opcua_map.xsd
